--- a/products.html
+++ b/products.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#d4a373">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="yawn.jpg" type="image/x-icon">
 </head>
 
 <body>
