--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <script>
         window.FIREBASE_CONFIG = { apiKey: "AIzaSyAtVIavqXkVlo17jcIoL0cuACelhqHw7KA", authDomain: "yawnism-1fda9.firebaseapp.com", projectId: "yawnism-1fda9", storageBucket: "yawnism-1fda9.firebasestorage.app", messagingSenderId: "162759829520", appId: "1:162759829520:web:f422d0d234ffb7df4d4295", measurementId: "G-K8CRSK9H1B" };
-        if ('serviceWorker' in navigator) { window.addEventListener('load', () => navigator.serviceWorker.register('./sw.js')); }
+        // if ('serviceWorker' in navigator) { window.addEventListener('load', () => navigator.serviceWorker.register('./sw.js')); }
     </script>
     <script src="app.js" type="module"></script>
 </body>
