--- a/settings.html
+++ b/settings.html
@@ -49,7 +49,7 @@
         </main>
     </div>
     <script>window.FIREBASE_CONFIG = { apiKey: "AIzaSyAtVIavqXkVlo17jcIoL0cuACelhqHw7KA", authDomain: "yawnism-1fda9.firebaseapp.com", projectId: "yawnism-1fda9", storageBucket: "yawnism-1fda9.firebasestorage.app", messagingSenderId: "162759829520", appId: "1:162759829520:web:f422d0d234ffb7df4d4295" };</script>
-    <script src="app.js" type="module"></script>
+    <script src="js/settings.js" type="module"></script>
 </body>
 
 </html>
